--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,17 +19,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-        
-      - name: Install Gradle
-        run: sudo apt-get install gradle -y
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-      - name: Build APK
-        run: gradle assembleDebug
+      - name: Build with Gradle
+        run: ./gradlew :app:assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk
+          name: app-debug
           path: app/build/outputs/apk/debug/app-debug.apk
